# picoSerialControlledKeyboard

./: .gitignore  CMakeLists.txt  Makefile  README.md  WIRING.md  boot.py  code.py  code2.py  command_handler.py  config.json  config_manager.py  hardware.py  logger.py  macros.json  macros.py
tests/: TESTING.md  test_command_handler.py  test_config_manager.py  test_macros.py
